# LustWork

./: .gitignore  index.html  package.json  pnpm-lock.yaml  qa-report.md  vite.config.ts
.weaver/: config.json  tasks.yaml
.weaver/templates/: runner.md  workbench.md  workbench.shared-task-mechanism.md
docs/: qa-report-mvp-r1-r9.md
docs/prds/: lust-work-desktop-n-of-1-experiment-tracker-tauri-v0-1-mvp.md  lustwork-desktop-mvp-full-implementation.md  lustwork-mvp.md
docs/testing/: ENVIRONMENT.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs  types.rs
src/components/: ExportDialog.tsx  Header.tsx  NotesSection.tsx  QuickCapturePalette.tsx  RatingsPanel.tsx  RewardPanel.tsx  SettingsPage.tsx  TaskList.tsx  TodayPage.tsx  WorkTimer.tsx
src/pages/: SettingsPage.tsx  TodayPage.tsx
src/store/: todayStore.ts  types.ts  useStore.ts
src/types/: index.ts
